2nd_upload_(friends.html page)
2nd upload - update 1st page (index.html/css)
                - upload 2nd page (friends.html/css)

--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,9 +3,14 @@
 }
 
 .status-bar {
+    font-size: small;
     display: flex;
     justify-content: center;
     padding : 5px 3px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
 
 }
 
