--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500&display=swap');
+
 @import "reset.css";
 @import "variables.css";
-@import "status-bar.css";
+
+/* components */
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/friends.css";
+@import "components/user-component.css";
+
+/* screens */
+@import "screens/login.css";
 
 body {
+    color: #2e363e;
     font-family: 'Golos Text', sans-serif;
-}
-
-.welcome-header {
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 500;
-}
-
-.welcome-header_title{
-    margin-bottom: 20px;
-    font-size: 25px;
-}
-
-.welcome-header_text {
-    width: 80%;
-    opacity: 0.5;
-    font-weight: 300px;
-}
-
-
-#login-form {
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-
-}
-
-#login-form input {
-    padding: 15px 0px;
-    border: none;
-    font-size: 19px;
-    margin-bottom: 25px;
-}
-#login-form input:not([type="submit"]){
-    border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
-    transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder {
-    color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-   border-color: var(--yellow);
-}
-
-#login-form input[type="submit"]{
-    background-color: var(--yellow);
-    cursor: pointer;
-    padding: 20px 0px;
-    border-radius:  5px;
-}
-
-#login-form a {
-    text-align: center;
-    text-decoration: none;
-    color: inherit;     /* from the parents, inherit the color */
-    font-size: 13px;
-    
 }
