--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -25,7 +25,7 @@
 
 .user-component__subtitle{
     margin-top: 5px;
-    font-size: 13px;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.5);
 }
 
@@ -47,8 +47,19 @@
 .user-component__colunm:last-child {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    
+
 }
 
 .check {
     padding-top: 5px;
 }
+
+.user-component__time {
+    margin-bottom:  10px;
+    display: block;
+}
+
