--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,12 @@
 @import "components/friends.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-row.css";
 
 /* screens */
 @import "screens/login.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body {
     color: #2e363e;
