--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,21 +1,38 @@
 .alt-header {
-    margin-top:25px ;
-    padding: var(--horizontal-space);
-    margin-bottom:  5px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-top:22px ;
+    width: 100%;
+    padding: 15px 5px;
+    margin-bottom:  5px;
+    align-items: center;
+    box-sizing: border-box;
+
 }   
+.alt-header__column {
+    width: 33%;
+}
 
 .alt-header__column__title {
     font-size: 15px;
     font-weight: 600;
 }
 
-.alt-header__column:first-child {
-    margin-right: auto;
+.alt-header__column:nth-child(2){
+    display: flex;
+    justify-content: center;
 }
 
 .alt-header__column:last-child {
-    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.alt-header__column:last-child  i:nth-child(2){
+    margin-left: 20px;
+}
+
+.alt-header__column {
+    margin: 0px 10px
 }
