--- a/css/components/friends.css
+++ b/css/components/friends.css
@@ -31,3 +31,30 @@
     color: rgba(0, 0, 0, 0.5);
     font-size: 12px;
 }
+
+@keyframes hideSplashScreen {
+    from{
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+ }
+
+
+#splash-screen {
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 80px;
+    animation: hideSplashScreen 0.5s ease-in-out forwards;
+    animation-delay:1s ;
+
+}
