--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -32,11 +32,23 @@
 }
 
 
+@keyframes notificationAnimation {
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(05px);
+    }
+    100%{
+        transform: none;
+    }
+}
 
 .nav__notification {
     position: absolute;
     left: 10px;
     bottom: 10px;
+    animation: notificationAnimation 2s ease-in-out infinite ;
 }
 
 
@@ -51,4 +63,37 @@
     margin-left: 5px;
     align-items: center;
     padding: 2px;
+}
+
+@keyframes appearBtnAni {
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+
+    }
+    to{
+        opacity: 1;
+        transform: none;
+
+    }
+}
+
+.nav__btn{
+        transform: translateY(30px);
+        opacity: 0;
+    animation: appearBtnAni 1s ease-in-out forwards;
+
+}
+
+
+.nav__btn:nth-child(2){
+    animation-delay: 0.5s;
+}
+
+.nav__btn:nth-child(3) {
+    animation-delay: 1s;
+}
+
+.nav__btn:nth-child(4) {
+    animation-delay: 1.5s;
 }
