--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -97,6 +97,8 @@
 .open-post__photo {
     position: relative;
 }
+
+
 .open-post-heart-count {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
@@ -111,4 +113,27 @@
 }
 .open-post-heart-count span {
     margin-left: 4px;
+}
+
+@keyframes heartBeat {
+    0%{
+        color: white;
+        transform: none;
+        
+    }
+    50% {
+        color: tomato;
+        transform: scale(1.5);
+
+    }
+    100%{
+        color: white;
+        transform:none;
+
+    }
+}
+
+.open-post-heart-count:hover i {
+    will-change: transform;
+    animation: heartBeat 1s linear infinite;
 }
