--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,14 @@
 @import "components/badge.css";
 @import "components/alt-screen-header.css";
 @import "components/icon-row.css";
+@import "components/no-mobile.css";
 
 /* screens */
 @import "screens/login.css";
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
     color: #2e363e;
